--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "reactstrap": "^4.3.0",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "webpack-bundle-analyzer": "^2.8.2"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
