--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "plugins": ["transform-export-extensions"],
-  "presets": [ "react", "es2015", "react-app" ]
+  "presets": [ "react", "env", "react-app" ]
 }
