--- a/package.json
+++ b/package.json
@@ -4,61 +4,47 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "axios": "^0.16.0",
-    "bootstrap": "4.0.0-alpha.6",
+    "axios": "0.18",
     "intl": "^1.2.5",
-    "lodash.groupby": "^4.6.0",
-    "react": "^15.4.2",
-    "react-addons-css-transition-group": "^15.4.2",
-    "react-addons-transition-group": "^15.4.2",
-    "react-bootstrap": "^0.30.8",
-    "react-dom": "^15.4.2",
+    "material-ui": "^0.20.0",
+    "prop-types": "^15.6.0",
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
     "react-icons": "^2.2.3",
     "react-intl": "^2.2.3",
-    "react-pdf": "^1.6.1",
-    "react-pdf-js": "^1.0.35",
-    "react-redux": "^5.0.3",
-    "react-router": "^3.0.2",
-    "react-slick": "^0.14.11",
-    "react-toggle": "^3.0.1",
-    "react-transition-group": "^1.1.2",
-    "reactstrap": "^4.3.0",
-    "redux": "^3.6.0",
-    "redux-logger": "^3.0.1",
-    "redux-thunk": "^2.2.0",
-    "webpack-bundle-analyzer": "^2.8.2"
+    "react-router": "4.2",
+    "react-transition-group": "2.2.1"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
     "axios-mock-adapter": "^1.8.1",
-    "babel-core": "6.22.1",
-    "babel-eslint": "7.1.1",
-    "babel-jest": "18.0.0",
-    "babel-loader": "6.2.10",
+    "babel-core": "6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-loader": "7.1.2",
     "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react-app": "^2.1.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react-app": "3.1.0",
     "babel-runtime": "^6.20.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
     "cross-spawn": "4.0.2",
-    "css-loader": "0.26.1",
+    "css-loader": "0.28.7",
     "detect-port": "1.0.1",
     "dotenv": "2.0.0",
     "enzyme": "^2.7.1",
-    "eslint": "3.16.1",
-    "eslint-config-react-app": "^0.6.1",
-    "eslint-loader": "1.6.0",
-    "eslint-plugin-flowtype": "2.21.0",
-    "eslint-plugin-import": "2.0.1",
-    "eslint-plugin-jsx-a11y": "4.0.0",
-    "eslint-plugin-react": "6.4.1",
-    "expect": "^1.20.2",
-    "extract-text-webpack-plugin": "1.0.1",
+    "eslint": "4.10.0",
+    "eslint-config-react-app": "2.0.1",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.39.0",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.4.0",
+    "expect": "22.4.3",
+    "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "0.10.0",
     "fs-extra": "0.30.0",
-    "html-webpack-plugin": "2.24.0",
+    "html-webpack-plugin": "2.29.0",
     "http-proxy-middleware": "0.17.3",
     "ignore-styles": "^5.0.1",
     "jest": "18.1.0",
@@ -66,25 +52,23 @@
     "json-loader": "0.5.4",
     "mocha": "^3.2.0",
     "node-sass": "^4.5.0",
-    "object-assign": "4.1.1",
-    "postcss-loader": "1.2.2",
-    "promise": "7.1.1",
-    "react-addons-test-utils": "^15.4.2",
-    "react-dev-utils": "^0.5.2",
-    "sass-loader": "^6.0.3",
+    "postcss-flexbugs-fixes": "^3.2.0",
+    "postcss-loader": "2.0.8",
+    "react-dev-utils": "^4.2.1",
+    "react-test-renderer": "^16.0.0",
+    "sass-loader": "^6.0.6",
     "sinon": "^1.17.7",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
-    "webpack": "1.14.0",
-    "webpack-dev-server": "1.16.2",
-    "webpack-manifest-plugin": "1.1.0",
+    "style-loader": "0.19.0",
+    "url-loader": "0.6.2",
+    "webpack": "3.10",
+    "webpack-bundle-analyzer": "^2.8.2",
+    "webpack-dev-server": "2.9.4",
     "whatwg-fetch": "2.0.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "start:mocks": "node scripts/start.js --mocks=true",
+    "start:mocks": "node scripts/mock.js --mocks=true",
     "build": "node scripts/build.js",
-    "build:mocks": "node scripts/build.js --mocks=true",
     "test": "mocha --reporter progress config/mocha.config.js  \"src/**/*.test.js\" ",
     "test:watch": "npm run test -- --watch",
     "test:jest": "node scripts/test.js --env=jsdom"
