--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "16.3.2",
     "react-icons": "^2.2.3",
     "react-intl": "^2.2.3",
-    "react-router": "4.2",
+    "react-router-dom": "^4.2.2",
     "react-transition-group": "2.2.1"
   },
   "devDependencies": {
