--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "homepage": ".",
   "dependencies": {
     "axios": "0.18",
+    "boostrap": "^2.0.0",
     "intl": "^1.2.5",
-    "material-ui": "^0.20.0",
     "prop-types": "^15.6.0",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-icons": "^2.2.3",
     "react-intl": "^2.2.3",
     "react-router-dom": "^4.2.2",
+    "react-toolbox": "^2.0.0-beta.12",
     "react-transition-group": "2.2.1"
   },
   "devDependencies": {
