--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "homepage": ".",
   "dependencies": {
     "axios": "0.18",
-    "boostrap": "^2.0.0",
+    "bootstrap": "^4.1.1",
     "intl": "^1.2.5",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.0",
     "react": "16.3.2",
+    "react-calendar": "^2.15.1",
     "react-dom": "16.3.2",
     "react-icons": "^2.2.3",
     "react-intl": "^2.2.3",
     "react-router-dom": "^4.2.2",
-    "react-toolbox": "^2.0.0-beta.12",
-    "react-transition-group": "2.2.1"
+    "react-select": "^1.2.1",
+    "react-textarea-autosize": "^6.1.0",
+    "react-times": "^3.0.0",
+    "react-transition-group": "2.2.1",
+    "reactstrap": "^6.1.0"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
